# bobbie

./: .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  publish.yml
advanced/: index.html
bobbie/: __init__.py  core.py  descriptors.py  extensions.py  filters.py  parsers.py  views.py  workshop.py
changelog/: index.html
code_of_conduct/: index.html
contributing/: index.html
credits/: index.html
license/: index.html
recipes/: index.html
reference/SUMMARY/: index.html
reference/bobbie/: index.html
reference/bobbie/base/: index.html
reference/bobbie/loaders/: index.html
reference/bobbie/options/: index.html
reference/bobbie/setup/: index.html
reference/bobbie/utilities/: index.html
scripts/: gen_credits.py
search/: search_index.json
src/bobbie/: __init__.py  base.py  configuration.py  core.py  extensions.py  filters.py  formats.py  loaders.py  options.py  parsers.py  setup.py  utilities.py
tests/: cancer_settings.ini  project_settings json  project_settings yaml  project_settings.ini  project_settings.py  project_settings.toml  project_settings.xml  project_settings.yaml  test_bobbie.py  test_main.py
tutorial/: index.html
