[tool.poetry]
name = "bobbie"
version = "0.1.5"
description = "flexible, easy python project configuration"
authors = ["corey rayburn yung <coreyrayburnyung@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/WithPrecedent/bobbie"
repository = "https://github.com/WithPrecedent/bobbie"

[tool.poetry.dependencies]
python = "^3.9"
camina = "^0.1.11"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.extras]
formats = ["toml", "pyyaml"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
